--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{ template "title" . }}</title>
+    <title>{{ block "title" . }}Default Title{{ end }}</title>
+    <meta charset="utf-8">
 </head>
 <body>
     <header>
@@ -16,7 +17,7 @@
     </header>
 
     <main>
-        {{ template "content" . }}
+        {{ block "content" . }}Default Content{{ end }}
     </main>
 
     <footer>
