--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -1,9 +1,4 @@
-<!-- web/templates/contact.html -->
-{{ template "base" . }}
-
-{{ define "title" }}{{ .Title }}{{ end }}
-
-{{ define "content" }}
 <h2>Contact</h2>
+<b>Title = {{.Title}}</b>
 <p>Email: <strong>{{ .Email }}</strong></p>
-{{ end }}
+<!-- your paragraphs -->
