--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -14,6 +14,8 @@
         <!-- Optional: your custom styles -->
         <link rel="stylesheet" href="/static/css/app.css">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     </head>
     <body>
         <!--class="section"-->
@@ -44,8 +46,8 @@
                 
                     <div class="navbar-end">
                       <a class="navbar-item" href="/">Home</a>
-                      <a class="navbar-item" href="/about">About</a>
-                      <a class="navbar-item" href="/contact">Contact</a>
+                      <!-- <a class="navbar-item" href="/about">About</a> -->
+                      <!-- <a class="navbar-item" href="/contact">Contact</a> -->
                     </div>
                   </div>
                 </nav>
