--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -235,7 +235,7 @@
                 formData.append("fileName", file.name);
                 formData.append("chunkIndex", currentChunk);
                 formData.append("totalChunks", totalChunks);
-                formData.append("totalSize", totalChunks);
+                formData.append("totalSize", totalSize);
                 formData.append("uploaderId", currentUser);
 
 
