--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>{{ .Title }}</title>
+        <meta name="description" content="Tiny Drop makes sharing files simple, secure, and lightning-fast. Instantly send and receive files across local networks or over the internet without hassle. Perfect for personal, team, or public use.">
 
+
+        <link rel="icon" type="image/x-icon" href="/static/favicons/favicon-removebg-preview.png">
         <!-- Include Bulma CSS from CDN -->
 
         <link
