--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,4 +1,5 @@
-{{/* home.html */}}
+<!-- {{/* home.html */}} -->
+{{define "body"}}
 <div style="padding: 0; margin: 0;">
     <!-- Upload button triggers modal -->
     <div style="display: flex; justify-content: space-between;">
@@ -563,3 +564,5 @@
     }
 
 </style>
+
+{{end}}
